syntax = "proto3";

package io.opencola.relay.common.protobuf;

import "security.proto";

message Connect {
  bytes publicKey = 1;
}

message Challenge {
  string algorithm = 1;
  bytes data = 2;
}

message Header {
  bytes messageId = 1;
  bytes from = 2;
  io.opencola.serialization.protobuf.Signature signature = 3;
}

message RelayMessage {
  Header header = 1;
  bytes body = 2;
}

message Envelope {
  // Public key of the recipient
  bytes to = 1;

  // Message key used for deduplication. When present, if the relay has to store the message, only one with the same
  // key will be stored. If not present, the message is considered transient and will not be stored.
  bytes key = 2;

  bytes message = 3;
}



